# ortclib-cpp

./: .gitignore  .gitmodules  BUILD.gn  README.md  license.txt
libs/: .gclient
ortc/: ICapabilities.h  ICertificate.h  IConstraints.h  IDTLSTransport.h  IDTMFSender.h  IDataChannel.h  IDataChannelTypes.h  IDataTransport.h  IHelper.h  IICEGatherer.h  IICETransport.h  IICETransportController.h  IICETypes.h  IIdentity.h  IMediaDevices.h  IMediaElement.h  IMediaManager.h  IMediaStream.h  IMediaStreamTrack.h  IMediaStreamTrackSelector.h  IORTC.h  IRTCConnection.h  IRTCDTMFTrack.h  IRTCDataChannel.h  IRTCSocket.h  IRTCStream.h  IRTCTrack.h  IRTPListener.h  IRTPReceiver.h  IRTPSender.h  IRTPTypes.h  ISCTPTransport.h  ISRTPSDESTransport.h  ISettings.h  IStatsProvider.h  IStatsReport.h  RTCPPacket.h  RTPPacket.h  TrackDescription.h  license.txt  (+2 more)
ortc/adapter/: IHelper.h  IMediaStream.h  IPeerConnection.h  IPeerSessionDescriptionManager.h  ISessionDescription.h  adapter.h  types.h
ortc/cpp/: ifaddrs-android.cc  ortc.cpp  ortc.events.json  ortc.stats.events.json  ortc_Capabilities.cpp  ortc_Certificate.cpp  ortc_Constraints.cpp  ortc_DTLSCertificateGenerator.cpp  ortc_DTLSTransport.cpp  ortc_DTMFSender.cpp  ortc_DataChannel.cpp  ortc_Factory.cpp  ortc_Helper.cpp  ortc_ICEGatherer.cpp  ortc_ICEGathererRouter.cpp  ortc_ICETransport.cpp  ortc_ICETransportController.cpp  ortc_ICETypes.cpp  ortc_ISecureTransport.cpp  ortc_Identity.cpp  ortc_MediaChannelTraceHelper.cpp  ortc_MediaDevice.cpp  ortc_MediaDeviceCapture.cpp  ortc_MediaDeviceCaptureAudio.cpp  ortc_MediaDeviceCaptureVideo.cpp  ortc_MediaDeviceRenderAudio.cpp  ortc_MediaDevices.cpp  ortc_MediaEngine.cpp  ortc_MediaManager.cpp  ortc_MediaStream.cpp  ortc_MediaStreamTrack.cpp  ortc_MediaStreamTrackMonitor.cpp  ortc_ORTC.cpp  ortc_RTCConnection.cpp  ortc_RTCDTMFTrack.cpp  ortc_RTCDataChannel.cpp  ortc_RTCPPacket.cpp  ortc_RTCSocket.cpp  ortc_RTCStream.cpp  ortc_RTCTrack.cpp  (+30 more)
ortc/idl/: Capabilities.idl  Certificate.idl  Constraints.idl  DataChannel.idl  DtlsTransport.idl  DtmfSender.idl  IceGatherer.idl  IceTransport.idl  IceTransportController.idl  IceTypes.idl  Identity.idl  Logger.idl  MediaDevices.idl  MediaStreamTrack.idl  Ortc.idl  RtpListener.idl  RtpReceiver.idl  RtpSender.idl  RtpTypes.idl  SctpTransport.idl  Settings.idl  SrtpSdesTransport.idl  StatsProvider.idl  StatsReport.idl  config.json  enums.idl  error.idl  sources.gni  winuwp.json
ortc/idl/adapter/: MediaStream.idl  PeerConnection.idl  SessionDescription.idl  enums.idl
ortc/idl/wrapper/: impl_org_ortc.cpp  impl_org_ortc_ConstrainBoolean.cpp  impl_org_ortc_ConstrainBoolean.h  impl_org_ortc_ConstrainBooleanParameters.cpp  impl_org_ortc_ConstrainBooleanParameters.h  impl_org_ortc_ConstrainDouble.cpp  impl_org_ortc_ConstrainDouble.h  impl_org_ortc_ConstrainDoubleRange.cpp  impl_org_ortc_ConstrainDoubleRange.h  impl_org_ortc_ConstrainLong.cpp  impl_org_ortc_ConstrainLong.h  impl_org_ortc_ConstrainLongRange.cpp  impl_org_ortc_ConstrainLongRange.h  impl_org_ortc_ConstrainString.cpp  impl_org_ortc_ConstrainString.h  impl_org_ortc_ConstrainStringParameters.cpp  impl_org_ortc_ConstrainStringParameters.h  impl_org_ortc_Dispatcher.cpp  impl_org_ortc_Dispatcher.h  impl_org_ortc_DoubleRange.cpp  impl_org_ortc_DoubleRange.h  impl_org_ortc_Error.cpp  impl_org_ortc_Error.h  impl_org_ortc_ErrorEvent.cpp  impl_org_ortc_ErrorEvent.h  impl_org_ortc_EventQueue.cpp  impl_org_ortc_EventQueue.h  impl_org_ortc_EventQueueMaker.cpp  impl_org_ortc_EventQueueMaker.h  impl_org_ortc_Helper.cpp  impl_org_ortc_Helper.h  impl_org_ortc_Json.cpp  impl_org_ortc_Json.h  impl_org_ortc_Logger.cpp  impl_org_ortc_Logger.h  impl_org_ortc_LongRange.cpp  impl_org_ortc_LongRange.h  impl_org_ortc_MediaControl.cpp  impl_org_ortc_MediaControl.h  impl_org_ortc_MediaDeviceInfo.cpp  (+291 more)
ortc/idl/wrapper/cppwinrt/: Org.Ortc.MediaSource.h
ortc/idl/wrapper/msidl/: Org.Ortc.MediaSource.idl
ortc/idl/wrapper/override/: org_ortc_Dispatcher.h  org_ortc_EventQueue.h  org_ortc_EventQueueMaker.h  org_ortc_MediaControl.h  org_ortc_MediaSource.h
ortc/idl/wrapper/override/c/: c_org_ortc_EventQueue.cpp  c_org_ortc_EventQueue.h  c_org_ortc_EventQueueMaker.cpp  c_org_ortc_EventQueueMaker.h  c_org_ortc_MediaControl.cpp  c_org_ortc_MediaControl.h  c_org_ortc_MediaSource.cpp  c_org_ortc_MediaSource.h
ortc/idl/wrapper/override/cppwinrt/: EventQueue.cpp  EventQueue.h  EventQueueMaker.cpp  EventQueueMaker.h  MediaControl.cpp  MediaControl.h  MediaSource.cpp  MediaSource.h  Org.Ortc.EventQueue.cpp  Org.Ortc.EventQueue.h  Org.Ortc.EventQueueMaker.cpp  Org.Ortc.EventQueueMaker.h  Org.Ortc.MediaControl.cpp  Org.Ortc.MediaControl.h  Org.Ortc.MediaSource.cpp  Org.Ortc.MediaSource.h  cppwinrt_Helpers_Throwers.cpp
ortc/idl/wrapper/override/cx/: MediaSourceHelper.cc  MediaSourceHelper.h  Org_Ortc_EventQueue.cpp  Org_Ortc_EventQueue.h  Org_Ortc_EventQueueMaker.cpp  Org_Ortc_MediaControl.cpp  Org_Ortc_MediaControl.h  Org_Ortc_MediaSource.cpp  RTMediaStreamSource.h  WebRtcMediaSource.cc  WebRtcMediaSource.h  WebRtcMediaStream.cc  WebRtcMediaStream.h  cx_Helpers_Throwers.cpp
ortc/idl/wrapper/override/msidl/: Org.Ortc.EventQueue.idl  Org.Ortc.EventQueueMaker.idl  Org.Ortc.MediaControl.idl  Org.Ortc.MediaSource.idl
ortc/internal/: ifaddrs-android.h  ortc.events.h  ortc.events.jman  ortc.events_win.h  ortc.events_win_etw.man  ortc.events_win_etw.wprp  ortc.h  ortc.stats.events.h  ortc.stats.events.jman  ortc.stats.events_win.h  ortc.stats.events_win_etw.man  ortc.stats.events_win_etw.wprp  ortcEvents.h  ortc_Certificate.h  ortc_DTLSCertificateGenerator.h  ortc_DTLSTransport.h  ortc_DTMFSender.h  ortc_DataChannel.h  ortc_ETWStatsReport.h  ortc_ETWStatsReport.man  ortc_ETWStatsReport.wprp  ortc_ETWTracing.man  ortc_ETWTracing.wprp  ortc_Factory.h  ortc_Helper.h  ortc_ICEGatherer.h  ortc_ICEGathererRouter.h  ortc_ICETransport.h  ortc_ICETransportController.h  ortc_IMediaDevice.h  ortc_IMediaDeviceCapture.h  ortc_IMediaDeviceRender.h  ortc_IMediaStreamTrack.h  ortc_IMediaStreamTrackChannel.h  ortc_IMediaStreamTrackMonitor.h  ortc_IRTP.h  (+59 more)
(+680 files in other folders)
