ortc_sources_cxx_glue = [
"ortc/idl/wrapper/impl_org_ortc_adapter_RTCMediaStreamTrackConfiguration.h",
 "ortc/idl/wrapper/impl_org_ortc_ConstrainLong.h",
 "ortc/idl/wrapper/impl_org_ortc_ConstrainString.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCInboundRtpStreamStats.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpReceiver.cpp",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionMediaLine.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCMessageEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_MediaTrackConstraintSet.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpH264CodecParameterSettings.cpp",
 "ortc/idl/wrapper/impl_org_ortc_ConstrainBoolean.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCDtlsFingerprint.h",
 "ortc/idl/wrapper/impl_org_ortc_DoubleRange.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionMediaLineDetails.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCOfferOptions.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCDtlsTransport.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpCodecCapability.h",
 "ortc/idl/wrapper/impl_org_ortc_EventQueue.h",
 "ortc/idl/wrapper/impl_org_ortc_EventQueue.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtcpFeedback.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceTransport.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCMessageEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpCodecParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCDataChannel.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCMediaStreamStats.cpp",
 "ortc/idl/wrapper/impl_org_ortc_LongRange.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtcpParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceCandidatePair.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceCandidatePairStats.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceTransportController.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionTransportParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCDataChannelStateChangeEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtcpParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpHeaderExtensionParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpCodecParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCCapabilityOptions.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCMediaStreamStats.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionRtpSender.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpVp8CodecCapabilityParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceCandidateAttributes.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpUnhandledEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCPeerConnection.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpStreamStats.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCCodec.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpCodecCapabilityParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCPeerConnectionIceErrorEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCConfiguration.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCDataChannelParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceTransportController.cpp",
 "ortc/idl/wrapper/impl_org_ortc_MediaTrackConstraints.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpHeaderExtension.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceTransportStateChangeEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCSrtpSdesTransportLifetimeRemainingEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_MediaStreamTrack.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceServer.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpRtxCodecParameterSettings.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCSctpTransport.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceCandidatePairChangeEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpRedCodecParameterSettings.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCOfferAnswerOptions.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCStatsTypeSet.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCDtlsTransportStats.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceServer.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionConnectionData.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceGatherInterfacePolicy.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpCodecCapabilityOptions.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtcpTransport.cpp",
 "ortc/idl/wrapper/impl_org_ortc_MediaDevices.h",
 "ortc/idl/wrapper/impl_org_ortc_LongRange.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceCandidate.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpContributingSource.h",
 "ortc/idl/wrapper/impl_org_ortc_ErrorEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCDtlsFingerprint.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpFecParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceGathererStats.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCDtlsTransport.cpp",
 "ortc/idl/wrapper/impl_org_ortc_ConstrainBoolean.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCSctpTransportListener.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpRtxCodecCapabilityParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCPeerConnection.h",
 "ortc/idl/wrapper/impl_org_ortc_ConstrainLongRange.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpOpusCodecCapabilityOptions.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpOpusCodecCapabilityParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceGatherOptions.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionRtpSenderDetails.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCSrtpSdesKeyParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpH264CodecParameterSettings.h",
 "ortc/idl/wrapper/impl_org_ortc_MediaDeviceInfo.cpp",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionConnectionData.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIdentity.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpListener.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCAnswerOptions.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCOfferOptions.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpCodecCapabilityOptions.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_MediaStream.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceGatherer.cpp",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionSctpMediaLine.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpHeaderExtensionParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_Helper.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpSender.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpRtxParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCDtlsCertificateBinary.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCTrackEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCCertificateStats.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCStatsProvider.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpRedCodecParameterSettings.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCDtlsParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCSctpCapabilities.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceTransport.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceCandidateComplete.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpVp8CodecCapabilityParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCStatsProvider.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpUnhandledEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtcpFeedback.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCSrtpSdesCryptoParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCTrackEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_ConstrainDoubleRange.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionRtpMediaLine.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpStreamStats.cpp",
 "ortc/idl/wrapper/impl_org_ortc_StringOrStringList.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceCandidatePairStats.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceGatherOptions.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCInboundRtpStreamStats.cpp",
 "ortc/idl/wrapper/impl_org_ortc_ConstrainString.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpFlexFecCodecCapabilityParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpCodecParameterSettings.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtcpTransport.h",
 "ortc/idl/wrapper/impl_org_ortc_MediaDevices.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCSrtpSdesTransportLifetimeRemainingEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCSctpTransportStats.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCDtlsCertificateBinary.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCDataChannelStats.cpp",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionDescription.cpp",
 "ortc/idl/wrapper/impl_org_ortc_MediaStreamConstraints.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCCapabilityOptions.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpCodecCapabilityParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionTransportParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_Settings.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpVp8CodecParameterSettings.h",
 "ortc/idl/wrapper/impl_org_ortc_Json.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCSctpTransportListenerEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCSctpTransportListener.cpp",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionDescriptionDetails.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpTransport.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCStatsReport.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCDataTransport.cpp",
 "ortc/idl/wrapper/impl_org_ortc_MediaControl.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCDtlsTransportStateChangeEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceGatherInterfacePolicy.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceGathererCandidate.h",
 "ortc/idl/wrapper/impl_org_ortc_ConstrainBooleanParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_MediaStream.cpp",
 "ortc/idl/wrapper/impl_org_ortc_MediaStreamTrack.cpp",
 "ortc/idl/wrapper/impl_org_ortc_Error.cpp",
 "ortc/idl/wrapper/impl_org_ortc_MediaDeviceInfo.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionRtpSender.cpp",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescription.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpCapabilities.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceTransportStats.cpp",
 "ortc/idl/wrapper/impl_org_ortc_MediaTrackSettings.cpp",
 "ortc/idl/wrapper/impl_org_ortc_MediaTrackSettings.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCSctpTransportStats.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCSrtpSdesCryptoParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCPeerConnectionIceEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIdentityError.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCDataChannelEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceTransportStateChangeEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionConnectionDataDetails.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCSctpTransportStateChangeEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCDtmfToneChangeEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceCandidateComplete.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCDataChannelStateChangeEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceCandidatePairChangeEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_MediaControl.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceGathererCandidateCompleteEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionTransport.cpp",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCOfferAnswerOptions.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpFlexFecCodecParameterSettings.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpReceiver.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionDescriptionDetails.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionMediaLineDetails.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceGatherer.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpFlexFecCodecCapabilityParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_MediaTrackSupportedConstraints.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCSrtpSdesTransport.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCMediaStreamTrackConfiguration.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpFecParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_MediaTrackCapabilities.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpOpusCodecCapabilityOptions.cpp",
 "ortc/idl/wrapper/impl_org_ortc_ConstrainDoubleRange.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCDtlsTransportStats.h",
 "ortc/idl/wrapper/impl_org_ortc_Logger.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCPeerConnectionIceErrorEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIdentityResult.cpp",
 "ortc/idl/wrapper/impl_org_ortc_MediaStreamConstraints.cpp",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCIceCandidate.cpp",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCIceCandidate.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCStats.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCStatsTypeSet.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCSctpCapabilities.cpp",
 "ortc/idl/wrapper/impl_org_ortc_Error.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionRtpMediaLine.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCCertificate.h",
 "ortc/idl/wrapper/impl_org_ortc_OverconstrainedError.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCSrtpSdesParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpH264CodecCapabilityParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_ConstrainBooleanParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_ConstrainDouble.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpContributingSource.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpCapabilities.cpp",
 "ortc/idl/wrapper/impl_org_ortc_ConstrainStringParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_OverconstrainedError.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpRtxParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionSctpMediaLine.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCSrtpSdesKeyParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpH264CodecCapabilityParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCDtlsParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceGathererCandidateCompleteEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCSctpTransport.cpp",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCAnswerOptions.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceGathererCandidate.cpp",
 "ortc/idl/wrapper/impl_org_ortc_Logger.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCDataTransport.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCCertificateStats.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpRtxCodecParameterSettings.cpp",
 "ortc/idl/wrapper/impl_org_ortc_Json.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCCertificate.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceGathererStateChangeEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCDataChannelParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceTransportStats.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCSrtpTransportStats.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIdentityAssertion.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCMediaStreamTrackStats.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCDataChannelEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpVp8CodecParameterSettings.cpp",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionTransport.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCStatsReport.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCSsrcConflictEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_MediaSource.h",
 "ortc/idl/wrapper/impl_org_ortc_Helper.cpp",
 "ortc/idl/wrapper/impl_org_ortc_ConstrainLong.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCDtmfSender.cpp",
 "ortc/idl/wrapper/impl_org_ortc_ConstrainStringParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCDtmfSender.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIdentityAssertion.h",
 "ortc/idl/wrapper/impl_org_ortc_MediaTrackConstraints.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceCandidateAttributes.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceGathererCandidateEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCSrtpSdesTransport.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceCandidatePair.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceTransportOptions.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCDtmfToneChangeEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCMediaStreamTrackStats.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCDataChannelStats.h",
 "ortc/idl/wrapper/impl_org_ortc_MediaSource.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCOutboundRtpStreamStats.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpHeaderExtension.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceGathererStateChangeEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionRtpSenderDetails.h",
 "ortc/idl/wrapper/impl_org_ortc_ConstrainDouble.cpp",
 "ortc/idl/wrapper/impl_org_ortc_OrtcLib.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpFlexFecCodecParameterSettings.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpOpusCodecParameterSettings.h",
 "ortc/idl/wrapper/impl_org_ortc_StringOrStringList.cpp",
 "ortc/idl/wrapper/impl_org_ortc_OrtcLib.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceGathererCandidateEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceTransportOptions.cpp",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionMediaLine.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCSctpTransportListenerEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpOpusCodecParameterSettings.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpRtxCodecCapabilityParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCSrtpSdesParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpEncodingParameters.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCSrtpTransportStats.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpListener.cpp",
 "ortc/idl/wrapper/impl_org_ortc_ErrorEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionDescription.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCOutboundRtpStreamStats.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpTransport.h",
 "ortc/idl/wrapper/impl_org_ortc_DoubleRange.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCDataChannel.h",
 "ortc/idl/wrapper/impl_org_ortc_MediaTrackConstraintSet.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCPeerConnectionIceEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIdentityError.h",
 "ortc/idl/wrapper/impl_org_ortc_MediaTrackCapabilities.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceCandidate.h",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCConfiguration.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpCodecCapability.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCStats.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpCodecParameterSettings.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpSender.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceGathererIceErrorEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescription.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCSctpTransportStateChangeEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCCodec.h",
 "ortc/idl/wrapper/impl_org_ortc_OverconstrainedErrorEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_Settings.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpEncodingParameters.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCDtlsTransportStateChangeEvent.cpp",
 "ortc/idl/wrapper/impl_org_ortc_MediaTrackSupportedConstraints.cpp",
 "ortc/idl/wrapper/impl_org_ortc_adapter_RTCSessionDescriptionConnectionDataDetails.h",
 "ortc/idl/wrapper/types.h",
 "ortc/idl/wrapper/impl_org_ortc_OverconstrainedErrorEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceGathererIceErrorEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIceGathererStats.h",
 "ortc/idl/wrapper/impl_org_ortc_ConstrainLongRange.cpp",
 "ortc/idl/wrapper/impl_org_ortc_RTCIdentity.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCSsrcConflictEvent.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCIdentityResult.h",
 "ortc/idl/wrapper/impl_org_ortc_RTCRtpOpusCodecCapabilityParameters.h",
]